@@ -1,0 +1,19 @@
+import os
+import sys
+import csv
+import logging
+logging.basicConfig(filename='database.log', level='DEBUG')
+
+from tmm import settings
+
+def _create(*args):
+	print(args)
+	
+def _read():
+	pass
+
+def _update():
+	pass
+
+def _delete():
+	pass
